prod/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1
  namespace: prod
spec:
  selector:
    matchLabels:
      app: nginx-app1
  replicas: 4
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
      - name: nginx-app1
        image: nginx:1.14.2
        ports:
        - containerPort: 80
